Fixed header elements alignment.

--- a/sass/style-restaurant.scss
+++ b/sass/style-restaurant.scss
@@ -91,7 +91,7 @@ a {
 .main-section {
     display: flex;
     flex-direction: column;
-    margin-top: 16px;
+    // margin-top: 16px;
 
     & img {
         height: 275px;
@@ -101,19 +101,27 @@ a {
 
 .header {
     display: flex;
+    // padding-top: 16px;
 
     @include bg-white-100();
 
     &__logo {
         display: flex;
         justify-content: center;
-        align-items: flex-end;
+        align-items: center;
         box-sizing: border-box;
         width: 100%;
 
+        border: 2px solid red;
+
+        & p {
+            font-size: 30px;
+            padding-right: 63px;
+        }
+
         &--img {
             width: 162px;
-            height: 40px;
+            height: 30px;
             padding-top: 15px;
             padding-right: 63px;
         }
@@ -126,6 +134,8 @@ a {
         box-sizing: border-box;
         width: 63px;
         height: 63px;
+
+        border: 2px solid blue;
     }
 }
 
@@ -138,7 +148,7 @@ a {
     box-sizing: border-box;
     width: 100%;
     border-radius: 35px 35px 0 0;
-    margin: -15px 0 36px 0;
+    margin: -25px 0 36px 0;
     border: 2px solid green;
     background-color: #f6f6f6;
     gap: 40px;
